tests/errors/surf_name_02.ki
# name resolution: call an undefined function
compute()
